--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <div class="social-icons">
                 <a href="https://github.com/GpriyaGp"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/gokulapriya-babu/"><i class="fab fa-linkedin"></i></a>
-                <a href="mailto:saytogp@gmail.com"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:priyasmb24@gmail.com"><i class="fas fa-envelope"></i></a>
                 <a href="https://leetcode.com/priyasmb24/"><i class="fas fa-code"></i></a>
+                <a href="https://drive.google.com/file/d/1h8q8ru_YdpYf-cDUolRFgIOW2w1bT-xc/view?usp=sharing"><i class="fas fa-file-pdf"></i></a>
             </div>
         </div>
     </div>
