--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="https://www.linkedin.com/in/gokulapriya-babu/"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:priyasmb24@gmail.com"><i class="fas fa-envelope"></i></a>
                 <a href="https://leetcode.com/priyasmb24/"><i class="fas fa-code"></i></a>
+               <!-- <a href="https://drive.google.com/file/d/1rXamQboGcNzkPGhqjFH_OYcGfVIIBoL_/view?usp=sharing"><i class="fas fa-code"></i></a>-->
             </div>
         </div>
     </div>
