--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="centered">
             <h1>Gokulapriya Babu</h1>
-            <p>A .NET developer specializing in ASP.NET MVC, with experience in Android app development, OCR using neural networks, and AIML chatbots. Kindly reach out to me in the below forums</p>
+            <p>Experienced developer seeking entry-level opportunities to grow and contribute. ASP.NET developer, with knowledge of C-Sharp, AngularJS, and SQL. specializing in ASP.NET MVC, with experience in Android app development, OCR using neural networks, and AIML chatbots. Kindly reach out to me in the below forums</p>
             <div class="social-icons">
                 <a href="https://github.com/GpriyaGp"><i class="fab fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/gokulapriya-babu/"><i class="fab fa-linkedin"></i></a>
